
  * Release of alpha 37.
  * Reverted renaming of sel_ldr to nacl_loader. Thst isn't bundled and
    isn't a change which I want to make at this time (we may yet depend on a
    full nacl install, should one be officially packaged).
  * Disabled VoIP due to build breakage.
  * Restored correct use of Shift-Insert, which should access the current
    selection rather than the clipboard.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 02 Mar 2015 17:19:50 +0000

unvanquished (0.36.0-1) unstable; urgency=low

  * Release of alpha 36 "leaving the door wide open for spoofed packets".

 -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 02 Feb 2015 03:49:36 +0000

unvanquished (0.35.0-2) unstable; urgency=low

  * Fix paths to NaCl helper binaries.
  * Add libjpeg-dev as a preferred alternative dependency.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Wed, 14 Jan 2015 14:12:52 +0000

unvanquished (0.35.0-1) unstable; urgency=low

  * Release of alpha 35.
  * This build still uses SDL 1.2 where SDL 2 requires extra repositories,
    i.e. on wheezy.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 05 Jan 2015 04:04:58 +0000

unvanquished (0.34.0-1) unstable; urgency=low

  * Release of alpha 34.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 08 Dec 2014 03:04:06 +0000

unvanquished (0.33.0-1) unstable; urgency=low

  * Release of alpha 33.
  * Added antares & forlorn to default rotation.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Sun, 02 Nov 2014 19:58:32 +0000

unvanquished (0.32.0-1) unstable; urgency=low

  * Release of alpha 32.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Sun, 05 Oct 2014 15:19:01 +0100

unvanquished (0.31.0-1) unstable; urgency=low

  * Release of alpha 31.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 08 Sep 2014 18:35:08 +0100

unvanquished (0.30.0-1) unstable; urgency=low

  * Release of alpha 30.

 -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 04 Aug 2014 23:48:55 +0100

unvanquished (0.29.0-2) unstable; urgency=low
